--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,9 @@
 
 body{
   font-family: monaco, monospace;
-    background-color: #FAFAFA;
+    background-color: #333;
     max-width: 666px;
+    color: #C9C9C9;
 }
 
 .page{
@@ -61,14 +62,15 @@ details > summary::-webkit-details-marker {
 .clickable:hover{
     text-decoration: underline;
     cursor: pointer;
-    color: black;
+    color: white;
 }
 
 address,a{
     text-decoration: none;
     font-style:normal;
     display: inline;
-    color: black;
+    color: white;
+    cursor: pointer;
 }
 
 .bandcamp{
