--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body{
     background-color: #333;
     max-width: 666px;
     color: #C9C9C9;
+    font-size: 1.5em;
 }
 
 .page{
@@ -92,6 +93,10 @@ footer {
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+
+    body{
+        font-size: 1em;
     }
     
     .page{
