--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,11 @@ details > summary::-webkit-details-marker {
     color: white;
 }
 
+.categorydescription{
+    font-size: 0.8em;
+    font-style: italic;
+}
+
 address,a{
     text-decoration: none;
     font-style:normal;
