--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,17 @@ ul{
     margin-bottom: 2em;
 }
 
+body a{
+    text-decoration: none;
+  color: #ccc;
+  cursor: pointer;
+  outline-color: transparent;
+  border-radius: 3px;
+  padding-left: 5px;
+  padding-right: 5px;
+  background-color: DimGray;
+}
+
 .pics{
     display: flex;
     align-items: flex-start;
